--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 #Pycharm
 .idea/*
 __pycache*
+
+data/CNN_DM_pickle_data/vocab_100d.p
+data/CNN_DM_pickle_data/vocab_100d.txt
+data/CNN_DM_stories/cnn_stories_tokenized/
+data/CNN_DM_stories/dm_stories_tokenized/
+
